# QTPackageInstaller

./: CMakeLists.txt  PackageInstallerQT_ru_RU.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
installer/: IPackageInstaller.h  localpackageinstaller.cpp  localpackageinstaller.h
interfaces/: IPage.h
pages/: installpage.cpp  installpage.h  namepage.cpp  namepage.h
